Some Integer button increment/decrement arrows are broken (e.g Color Ramp switch arrows don't work) #69305

Closed
opened 2019-08-29 17:00:49 +02:00 by Vlad · 9 comments

System Information
Operating system: Windows 10

Blender Version
Broken: 2.81 Alpha, 2019-08-29

Short description of error
Clicking the arrows to switch the color inputs in the Color Ramp does nothing, holding and dragging the index area does work though.

Exact steps for others to reproduce the error
Add a color ramp node to the shader editor and try to switch color inputs by clicking the arrow button.
7dbT5burXe.gif

**System Information** Operating system: Windows 10 **Blender Version** Broken: 2.81 Alpha, 2019-08-29 **Short description of error** Clicking the arrows to switch the color inputs in the Color Ramp does nothing, holding and dragging the index area does work though. **Exact steps for others to reproduce the error** Add a color ramp node to the shader editor and try to switch color inputs by clicking the arrow button. ![7dbT5burXe.gif](https://archive.blender.org/developer/F7709665/7dbT5burXe.gif)
Author

Added subscriber: @guro

Added subscriber: @guro
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed checking....
Note: getting BLI_assert failed: /blender/source/blender/editors/interface/interface_handlers.c:4810, ui_do_but_NUM(), at 'value_step > 0' Aborted (core dumped)

Confirmed checking.... Note: getting `BLI_assert failed: /blender/source/blender/editors/interface/interface_handlers.c:4810, ui_do_but_NUM(), at 'value_step > 0' Aborted (core dumped)`
Member

Got a fix, just checking for a more general solution...

Got a fix, just checking for a more general solution...
Member

Added subscribers: @JulianEisel, @ideasman42, @brecht

Added subscribers: @JulianEisel, @ideasman42, @brecht
Member

Since 78b56fa7d9 many Integer arrow buttons are broken.
That is because many of them define a button with but->a1 = 0.
This was fine before above commit, but is not working anymore.

So we have two possibilities:

  • (1) we can be more forgiving in ui_do_but_NUM and still handle all buttons defining but->a1 = 0 here as having a step value of 1 (this was automatically the case before 78b56fa7d9)
  • (2) we need to go over all buttons UI_BTYPE_NUM and check how they define their step value, if it is 0, we should set it to 1.

I think (2) actually makes more sense, it is a bit more work, but is more readable and doesnt hide functionality in ui_do_but_NUM.
I can do both, just need feedback from @ideasman42, @brecht, @JulianEisel ...

Since 78b56fa7d9 many Integer arrow buttons are broken. That is because many of them define a button with `but->a1 = 0`. This was fine before above commit, but is not working anymore. So we have two possibilities: - (1) we can be more forgiving in `ui_do_but_NUM` and still handle all buttons defining `but->a1 = 0` here as having a step value of 1 (this was automatically the case before 78b56fa7d9) - (2) we need to go over all buttons `UI_BTYPE_NUM` and check how they define their step value, if it is `0`, we should set it to `1`. I think (2) actually makes more sense, it is a bit more work, but is more readable and doesnt hide functionality in `ui_do_but_NUM`. I can do both, just need feedback from @ideasman42, @brecht, @JulianEisel ...
Philipp Oeser changed title from Color Ramp switch arrows don't work to Most Integer button increment/decrement arrows are broken (e.g Color Ramp switch arrows don't work) 2019-08-30 10:45:02 +02:00
Member

Push back prio on this (it werent that many buttons actually...), went over them, diff incoming...

Push back prio on this (it werent that many buttons actually...), went over them, diff incoming...
Philipp Oeser changed title from Most Integer button increment/decrement arrows are broken (e.g Color Ramp switch arrows don't work) to Some Integer button increment/decrement arrows are broken (e.g Color Ramp switch arrows don't work) 2019-08-30 11:07:19 +02:00

This issue was referenced by 44ace647a8

This issue was referenced by 44ace647a8ec0d112700afe0c394ec25257fc04f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Philipp Oeser self-assigned this 2019-08-30 12:47:52 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69305
No description provided.